--- a/applications/dashboard/scss/_panel.scss
+++ b/applications/dashboard/scss/_panel.scss
@@ -34,6 +34,7 @@
 }
 
 .panel-right {
+  order: 3;
   color: $grey-dark;
   font-weight: 200;
   padding-right: $spacer;
