--- a/applications/dashboard/scss/_scaffold.scss
+++ b/applications/dashboard/scss/_scaffold.scss
@@ -3,6 +3,7 @@
 // No styleguide reference.
 
 .main {
+  order: 2;
   position: relative;
   overflow: auto;
   padding-left: $padding-default;
